  Command now defaults to applying only to available threads.  To
  restore previous behaviour of applying also to unavailable
  threads the option "-unavailable" is added.

* Add convenience variable `$_simd_lane`.

* Python API

  ** Added gdb.record.clear(). Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

* MI changes

  ** New option in '-thread-info': '--lid'; and new field: 'local-ids'

     If the option is present, then the new field 'local-ids' is included
     for stopped threads which are processing work-items and whose arch
     supports work-items.  The new field contains the list of work-item
     local IDs, processed by the thread.  A local ID is a string containing
     a three-dimensional tuple "x, y, z" that denotes the local coordinates of
     the work-item within its work-group.

  ** New field in '-thread-info': 'thread-workgroup-size'

     Added a new field to the '-thread-info' command.  If a thread is
     stopped, and workgroups are defined by its arch, the new field contains
     a string containing a three-dimensional tuple that denotes the size of
     the workgroup in each dimension.

  ** New optional argument in '-var-create': lane mask

     Added a new optional argument to '-var-create' command.  If present,
     the command creates a list of variable objects, one per lane specified
     by the lane mask.

  ** New field in '-var-create' output: 'lane'

     If a var object is created for a thread with SIMD lanes, store the lane
     for which the value is evaluated.

  ** New field in '-thread-info': 'kernel-instance-id'

     Added a new thread field to the '-thread-info' command.  If the thread is
     stopped, available, and the kernel-instance-id is defined for its arch,
     the new field contains a string with an identifier for each thread and
     is unique per kernel submission.  The term `kernel` refers to a function