@@ -260,6 +260,12 @@ do_print_shadow_stack_frame_info
       uiout->field_string
 	("addr", hex_string_custom (frame.value, element_size * 2),
 	 address_style.style ());
+
+      if (uiout->is_mi_like_p ())
+	{
+	  uiout->field_string
+	    ("arch", (gdbarch_bfd_arch_info (gdbarch))->printable_name);
+	}
       uiout->text ("\n");
       gdb_flush (gdb_stdout);
       return;
@@ -323,6 +329,12 @@ do_print_shadow_stack_frame_info
 	    if (lib != nullptr)
 	      print_lib (uiout, lib, true);
 	  }
+
+	if (uiout->is_mi_like_p ())
+	  {
+	    uiout->field_string
+	      ("arch", (gdbarch_bfd_arch_info (gdbarch))->printable_name);
+	  }
       } /* Extra scope to print frame tuple.  */
 
       uiout->text ("\n");
@@ -345,10 +357,9 @@ do_print_shadow_stack_frame_info
   gdb_flush (gdb_stdout);
 }
 
-/* Redirect output to a temporary buffer for the duration of
-   do_print_shadow_stack_frame_info.  */
+/* See shadow-stack.h.  */
 
-static void
+void
 print_shadow_stack_frame_info
   (gdbarch *gdbarch, const shadow_stack_print_options &print_options,
    const shadow_stack_frame_info &frame, print_what print_what)
